# base-64-bench

./: README.md  analyse_results.py  base_64_bench.py  cmd.txt  generate_dataset.py  pyproject.toml
analysis/: model_summary.csv
base64bench-logs/: 2025-10-02T11-39-07+00-00_base-64-bench_6LxhwQvoQLSMSACMu3tR8Z.eval  2025-10-02T11-39-07+00-00_base-64-bench_7GkmeW84KoBztSAVz5Suhf.eval  2025-10-02T11-39-07+00-00_base-64-bench_89sqHsr5mBuU83Wq7mTyR5.eval  2025-10-02T11-39-07+00-00_base-64-bench_DjqZYoaC2pmfyEpbsGBP7W.eval  2025-10-02T11-39-07+00-00_base-64-bench_PRA5RjiUWLsdLGDAJcx2Hy.eval  2025-10-02T11-39-07+00-00_base-64-bench_SvkkHw96hTVgxzZosBbcHr.eval  2025-10-02T11-39-07+00-00_base-64-bench_TUFWkBZoSQWkb4uUrqcHaU.eval  2025-10-02T11-39-07+00-00_base-64-bench_TZXcWAhnUGW5B7oRENkVpm.eval  2025-10-02T11-39-07+00-00_base-64-bench_Tr4s7dKgcwzGxnsJs8vS98.eval  2025-10-02T11-39-07+00-00_base-64-bench_Wf8g5mwKNTtTbduBF6Zdpk.eval  2025-10-02T11-39-07+00-00_base-64-bench_Z5AbdcU83PmX65EbvnCZiQ.eval  2025-10-02T11-39-07+00-00_base-64-bench_aFwBEiiJ3oceWeEV79dAGj.eval  2025-10-02T11-39-07+00-00_base-64-bench_aXcPWktjvYfRKwtKaHPxaG.eval  2025-10-02T11-39-07+00-00_base-64-bench_cyV5TSNujdEXn8oEPmvn93.eval  2025-10-02T11-39-07+00-00_base-64-bench_doD2LqzcS6X2LdtKFYnKjP.eval  2025-10-02T11-39-07+00-00_base-64-bench_hyCK5acTH3LBGkbisenEcG.eval  2025-10-02T11-39-07+00-00_base-64-bench_iqV3iQHigsVFq3GEg7p3HT.eval
