[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "base-64-bench"
version = "0.1.0"
description = "Base64 encoding/decoding benchmark for AI models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "pandas",
    "inspect_ai",
    "python-levenshtein",
    "anthropic>=0.69.0",
    "openai>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]
